syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcRaft";


message LogEntry{
	
	int32 prevLogIndex = 1;
	int32 prevTerm = 2;
	int32  term = 3;
	int32 logIndex = 4;
	google.protobuf.Timestamp timestamp = 5;
	string operation = 6; 
	string operationData = 7; 

	string operationInputs = 8;
}


message RequestVoteRequest{
	int32 term = 1;
	int32 candidate_id = 2;	
	int32 lastLogIndex = 3;
	int32 lastLogTerm = 4;
}


message RequestVoteResponse{
	int32 term = 1;
	bool vote = 2;
}


message AppendEntriesRequest{
	int32 term = 1;
	int32 prevIndex = 2;
	int32 prevTerm = 3;

	int32 log_index = 4;
	repeated LogEntry logEntries = 5;	
	int32  commitIndex = 6;
}


message AppendEntriesResponse{
	int32 term = 1;
	int32 matchIndex = 2;

	bool success = 3;
}


message InstallSnapshotRequest{
	int32 term = 1;
	int32 start_log_index = 2;
	int32 last_log_index = 3;
}


message InstallSnapshotResponse{
	int32 term = 1;
	int32 matchIndex = 2;

	bool success = 3;

}


service RaftService {
	rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
	rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
	rpc AppendEntriesPipe(stream AppendEntriesRequest) returns (stream AppendEntriesResponse);
	rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}